tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_oracle_attribute_on_non_unconstrained/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Usage of the `#[oracle]` function attribute is only valid on unconstrained functions
  ┌─ src/main.nr:2:9
  │
2 │         #[oracle(foo)]
  │         --------------
3 │         pub fn foo(x: Field, y: Field) {
  │                --- Oracle functions must have the `unconstrained` keyword applied
  │

Aborting due to 1 previous error
